--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,8 @@ grid.raster(img)
 
 # Events in 2018
 
+## [How R you? - R-Ladies Melbourne second anniversary](https://github.com/R-LadiesMelbourne/2018-10-16_How-R-You)
+
 ## [R as a tool for complex systems modelling](https://github.com/R-LadiesMelbourne/2018-09-19-R-as-a-tool-for-complex-systems-modelling)
 
 Run by [Caitlin Adams](https://www.linkedin.com/in/caitlinisabeladams/?originalSubdomain=au), PhD Student at Swinburne University's Centre for Astrophysics and Supercomputing.
