--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,11 @@ grid.raster(img)
 
 # Events in 2019
 
+## [NLP with SpaCy in R](https://github.com/R-LadiesMelbourne/2019-06-18-NLP-with-SpaCy-in-R)
+
+Prepared and presented by Ana Mamatelashvili
+
+
 ## [Baby one more time - reproducibility in R and when to bring in the big guns](https://mrslaviniag.github.io/xaringan_presentations/rladies_presentation_22_May_2019.html#1)
 
 Prepared and presented by [Lavinia Gordon](https://www.linkedin.com/in/lavinia-gordon-74b58659/?originalSubdomain=au)
