updating info for mid july event

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,13 +9,18 @@ urlcolor: magenta
 ```{r echo=FALSE,message=FALSE,fig.width=5,fig.height=5,fig.align='center',cache=TRUE}
 library(png)
 library(grid)
-img <- readPNG("~/Documents/varie/Rladies/logos/logo.png")
+img <- readPNG("~/Documents/personal/Rladies/logo/logo.png")
 grid.raster(img)
 ```
 
 \clearpage
 
 # Events in 2019
+
+## [Cluster analysis with international education data – challenges and insights](https://github.com/R-LadiesMelbourne/2019-07-15-Cluster-analysis-with-international-education-data)
+
+Prepared and presented by [Jenny Shen](https://www.nousgroup.com/people/jenny-shen/)
+
 
 ## [NLP with SpaCy in R](https://github.com/R-LadiesMelbourne/2019-06-18-NLP-with-SpaCy-in-R)
 
