--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,11 @@ grid.raster(img)
 
 # Events in 2019
 
+## [Designing Data Science](https://github.com/R-LadiesMelbourne/2019-11-26-Hadley-Wickham)
+
+Prepared and presented by [Hadley Wickham](http://hadley.nz/)
+
+
 ## [R-Shiny Tricks or Treats, Maybe Both?](https://github.com/R-LadiesMelbourne/2019-10-28-R-Shiny-Tricks-or-Treats-Maybe-Both-)
 
 Prepared and presented by [Goknur Giner](https://twitter.com/goknurginer)
