--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,9 @@ grid.raster(img)
 
 # Events in 2019
 
+## [Christmas networking party](https://github.com/R-LadiesMelbourne/2019-12-17-Christmas-party)
+
+
 ## [Designing Data Science](https://github.com/R-LadiesMelbourne/2019-11-26-Hadley-Wickham)
 
 Prepared and presented by [Hadley Wickham](http://hadley.nz/)
