--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,9 @@ grid.raster(img)
 
 # Events in 2020
 
+## [Binovisualfields Package: Development and Publication to CRAN](https://github.com/R-LadiesMelbourne/2020-05-12-Binovisualfields-Package-Development-and-Publication-to-CRAN)
+Organised by Nikki Rubinstein and run by Virginia Liu.
+
 ## [TidyTuesday](https://github.com/R-LadiesMelbourne/2020-02-27-Tidy-Tuesday) 
 Organised by Sepideh Foroutan and Anna Quaglieri and run by Sepideh.
 
