--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,10 @@ grid.raster(img)
 
 # Events in 2020
 
+## [Recent work in cluster trials and the representation of women in statistics](https://github.com/R-LadiesMelbourne/2020-06-22-Longitudinal-cluster-trial-and-women-in-statistics)
+Presented by [Jessica Kaska](https://jkasza.netlify.app/).
+
+
 ## [Binovisualfields Package: Development and Publication to CRAN](https://github.com/R-LadiesMelbourne/2020-05-12-Binovisualfields-Package-Development-and-Publication-to-CRAN)
 Organised by Nikki Rubinstein and run by Virginia Liu.
 
