update event links

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,15 @@ grid.raster(img)
 
 \clearpage
 
+# Events in 2021
+
+## [rstudio::global(2021) %>% filter(workshops == “diversity scholars”) %>% summarize()](https://github.com/R-LadiesMelbourne/2021-04-15-rstudio-global-2021-filter-workshops-diversity-scholars-summarize-)
+Presented by [Dr Shazia Ruybal Pesántez](https://www.shaziaruybal.com).
+
+## [2021-02-25-Tidy-Tuesday](https://github.com/R-LadiesMelbourne/2021-02-25-Tidy-Tuesday)
+Organised by [Danyang Dai](https://dai.netlify.app).
+
+
 # Events in 2020
 
 ## [How R you? - 4-year anniversary](https://github.com/R-LadiesMelbourne/2020-11-16_How-R-You-4years)
@@ -23,7 +32,7 @@ Go to [R-Ladies Melbourne Tips website](https://rladies-melbourne-4years.netlify
 
 
 ## [Resume Guru](https://github.com/R-LadiesMelbourne/2020-10-13-The-Resume-Guru)
-Presented by [Tahlia Marks](https://tahliaco.wixsite.com/resumegurubytahlia)
+Presented by [Tahlia Marks](https://tahliaco.wixsite.com/resumegurubytahlia).
 
 ## [Sport, Data and R](https://github.com/R-LadiesMelbourne/2020-09-21-sport-data-R)
 Presented by [Alice Sweeting](http://sportstatisticsrsweet.rbind.io/).
